Fix layout issue for controls

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,7 @@
 html, body { color: #fff; background: #111; font-family: 'Roboto', sans-serif; padding: 0; margin: 0; width: 100%; height: 100%; }
 body { overflow-x: hidden; }
 
+.controls .buttonSelect,
 .message,
 .map > .notice,
 .map > .actions > span,
@@ -94,12 +95,21 @@ body { overflow-x: hidden; }
     border-bottom: 1px solid #1f1f1f;
 }
 
+.controls > .selection {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%;
+    height: 50px;
+    border-bottom: 1px solid #1f1f1f;
+    line-height: 0;
+}
+
 .controls > .content {
     position: absolute;
     top: 50px;
     left: 0;
     width: 100%;
-    height: calc(100% - 50px - 50px);
+    height: calc(100% - 50px);
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -210,13 +220,17 @@ body { overflow-x: hidden; }
 .controls .buttonSelect {
     position: relative;
     display: inline-block;
-    padding: 10px 60px 10px 20px;
+    padding: 10px 20px 10px 20px;
+    line-height: 20px;
+    line-height: 1rem;
     text-align: left;
     border: 1px solid #1f1f1f;
     cursor: pointer;
-    margin-top: 15px;
+    margin-top: 12px;
+    margin-left: 10px;
     background: #111;
 }
+
 .controls .buttonSelect.selected,
 .controls .buttonSelect:hover {
     background: #3b608a;
